guacamole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  labels:
    app: guacamole-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
        - guacamole.lucasnet.int
        - guacamole.lucasnet.org
      secretName: lucasnet-tls
  rules:
    - host: guacamole.lucasnet.int
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: guacamole-app
                port:
                  number: 8080
